arr/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingres
  namespace: arr
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.home.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr-service
                port:
                  name: web-ui
